fix for wrapping issue with quick action icons in file system

--- a/Stylesheets/src/Neptune/Components/file-system.scss
+++ b/Stylesheets/src/Neptune/Components/file-system.scss
@@ -37,6 +37,8 @@
 	}
 
 	.quick-actions {
+		white-space: nowrap;
+
 		.btn {
 			@include buttonGlyphOnly($html-entity-nbsp);
 
